--- a/relazione/relazione.tex
+++ b/relazione/relazione.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,twoside,openright,titlepage,fleqn,%
+\documentclass[10pt,a4paper,twoside,openright,titlepage,fleqn,%
                headinclude,,footinclude,BCOR5mm,%
                numbers=noenddot,cleardoublepage=empty,%
                tablecaptionabove]{scrreprt}
@@ -70,7 +70,7 @@ Il visualizzatore mostra inoltre in tempo reale informazioni relative alla lavor
 
 \section{Strumenti usati, prerequisiti e istruzioni}
 \subsection{Strumenti usati}
-Il progetto è stato sviluppato in C++. Per lo sviluppo in ambiente Linux abbiamo usato Eclipse su Ubuntu 12.04, mentre per l'ambiente Windows è stato usato Visual Studio 2010. Lo strumento usato per la compilazione è CMake.
+Il progetto è stato sviluppato in C++. Per lo sviluppo in ambiente Linux abbiamo usato Eclipse su Ubuntu 12.04, mentre per l'ambiente Windows è stato usato Visual Studio 2010. Lo strumento usato per la compilazione è CMake ($\geq 2.6$).
 
 \subsection{Prerequisiti}
 Il progetto è stato sviluppato usando le seguenti librerie:
@@ -113,5 +113,8 @@ Per eseguire il progetto, lanciare il comando\\ \verb!/path/del/progetto/CNCSimu
 \section{Esempio di lavorazione}
 
 \section{Conclusioni}
+Il simulatore mostra come procede passo dopo passo il lavoro di fresatura, permettendo di regolare precisione della lavorazione e del rendering e la velocità di visualizzazione.
+
+Con i file di esempio messi a disposizione, le operazioni vengono portate a termine correttamente e con buone prestazioni, nonostante non sia stato possibile sfruttare CUDA perché nessuno di noi ha a disposizione una scheda grafica Nvidia.
 
 \end{document}
