--- a/relazione/CNCSimulator_relazione.tex
+++ b/relazione/CNCSimulator_relazione.tex
@@ -56,7 +56,7 @@
 
 \include{section/strumenti-compilazione}
 
-\input{section/conclusione.tex}
+\input{section/conclusione}
 
 % %aggiunge la bibliografia all'indice
  %%niente sezioni anche qui, ovvio....
