--- a/relazione/CNCSimulator_relazione.tex
+++ b/relazione/CNCSimulator_relazione.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt, draft]{article}
 
 \usepackage{enumitem}
 \usepackage[utf8]{inputenc}
@@ -15,7 +15,7 @@
 
 \usepackage{listings}
 \lstset{
-	basicstyle=\fontsize{8}{12}\ttfamily,
+	basicstyle=\fontsize{10}{12}\ttfamily,
 	inputencoding=utf8,
 	language=C++,
 	numbers=left,
