--- a/relazione/commands.tex
+++ b/relazione/commands.tex
@@ -1,6 +1,8 @@
 % qualche comando utile che evita di dover scrivere parole per intero
-
+\newcommand{\boost}{boost\xspace{}}
+\newcommand{\cpp}{C$++$\xspace{}}
 
 
 % qualche comando per uniformare lo stile di scrittura
 \newcommand{\shell}[1]{\texttt{#1}}
+\newcommand{\code}[1]{\lstinline!#1!}
