--- a/relazione/commands.tex
+++ b/relazione/commands.tex
@@ -1,6 +1,7 @@
 % qualche comando utile che evita di dover scrivere parole per intero
 \newcommand{\boost}{boost\xspace{}}
 \newcommand{\cpp}{C$++$\xspace{}}
+\newcommand{\osg}{OpenSceneGraph\xspace{}}
 
 
 % qualche comando per uniformare lo stile di scrittura
