--- a/relazione/CNCSimulator_relazione.tex
+++ b/relazione/CNCSimulator_relazione.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt, draft]{article}
+\documentclass[a4paper,12pt]{article}
 
 \usepackage{enumitem}
 \usepackage[utf8]{inputenc}
