relazione: tests, compilazione

--- a/relazione/CNCSimulator_relazione.tex
+++ b/relazione/CNCSimulator_relazione.tex
@@ -12,6 +12,9 @@
 \usepackage{subcaption}
 \usepackage{multirow}
 \usepackage{amsfonts}
+\usepackage{booktabs}
+\usepackage{wrapfig}
+%\usepackage[numbers]{natbib}
 
 \usepackage{listings}
 \lstset{
@@ -55,6 +58,8 @@
 \include{section/modules}
 
 \include{section/strumenti-compilazione}
+
+\include{section/esempio-lavorazione}
 
 \input{section/conclusione}
 
